<resources>
    <string name="app_name" translatable="false">ColorBlendr</string>
    <string name="app_moto">Express yourself with colors</string>
    <string name="app_description">Elevate your creativity with effortless material customization. Instantly tweak colors for a personalized touch in just a few taps.</string>
    <string name="tab_app_name" translatable="false">\u003C %s \u003E</string>
    <string name="monet_neutral">Neutral</string>
    <string name="monet_monochrome">Monochrome</string>
    <string name="monet_tonalspot">Tonal Spot</string>
    <string name="monet_vibrant">Vibrant</string>
    <string name="monet_rainbow">Rainbow</string>
    <string name="monet_expressive">Expressive</string>
    <string name="monet_fidelity">Fidelity</string>
    <string name="monet_fruitsalad">Fruit Salad</string>
    <string name="monet_content">Content</string>
    <string name="accurate_shades_title">Accurate shades</string>
    <string name="accurate_shades_desc">Keep accurate shades for accent colors</string>
    <string name="monet_style_title">Monet style</string>
    <string name="accent_saturation">Accent saturation</string>
    <string name="background_saturation">Background saturation</string>
    <string name="background_lightness">Background lightness</string>
    <string name="icon">Icon</string>
    <string name="reset">Reset</string>
    <string name="opt_selected1">Selected: %s</string>
    <string name="opt_selected2">Selected: %s%s</string>
    <string name="btn_apply">Apply customization</string>
    <string name="dev_name" translatable="false">DrDisagree</string>
    <string name="dev_bio">Learner | Developer | Designer</string>
    <string name="news">News</string>
    <string name="support">Support</string>
    <string name="github">Github</string>
    <string name="version">Version</string>
    <string name="version_codes" translatable="false">%s (#%d)</string>
    <string name="pitch_black_theme_title">Pitch black theme</string>
    <string name="pitch_black_theme_desc">Black background in dark mode</string>
    <string name="change_style_to_apply">If toggles don\'t apply instantly, try adjusting one of the sliders to apply changes promptly.</string>
    <string name="color_picker_preview">Color picker preview</string>
    <string name="seed_color_picker_title">Custom primary color</string>
    <string name="seed_color_picker_desc">Create palette based on custom color</string>
    <string name="colorPickerDialog_dialogName">Color Picker</string>
    <string name="colorPickerDialog_reset">Reset</string>
    <string name="colorPickerDialog_red" translatable="false">R</string>
    <string name="colorPickerDialog_blue" translatable="false">B</string>
    <string name="colorPickerDialog_green" translatable="false">G</string>
    <string name="colorPickerDialog_alpha" translatable="false">A</string>
    <string name="colorPickerDialog_hue" translatable="false">H</string>
    <string name="colorPickerDialog_saturation" translatable="false">S</string>
    <string name="colorPickerDialog_brightness" translatable="false">V</string>
    <string name="colorPickerDialog_rgb" translatable="false">RGB</string>
    <string name="colorPickerDialog_hsv" translatable="false">HSV</string>
    <string name="colorPickerDialog_preset">Preset</string>
    <string name="colorPickerDialog_image">Image</string>
    <string name="colorPickerDialog_imageColorPicker">Pick Color from Image</string>
    <string name="colorPickerDialog_imageName">Image Picker</string>
    <string name="colorPickerDialog_grant_permissions">Grant Permissions</string>
    <string name="colorPickerDialog_msg_grant_permissions">Please grant the \'External Storage\' permissions to continue.</string>
    <string name="colorPickerDialog_msg_image_invalid">Couldn\'t use this image.</string>
    <string name="colorPickerDialog_title_all_photos">All Photos</string>
    <string name="colorPickerDialog_msg_permissions_denied">Permission denied.</string>
    <string name="colorPickerDialog_msg_permissions_button">Grant</string>
    <string name="custom_primary_color_title">Custom primary color</string>
    <string name="custom_primary_color_desc">Generate palette from custom color</string>
    <string name="meet_the_developer">Meet the developer</string>
    <string name="buymeacoffee_title">Enjoying this app?</string>
    <string name="buymeacoffee_desc">Consider buying me a coffee</string>
    <string name="override_colors_manually_title">Override colors manually</string>
    <string name="override_colors_manually_desc">Tap on the color palette preview to override individual colors; long press to reset</string>
    <string name="override">Override</string>
    <string name="copy">Copy</string>
    <string name="color_code">Color code: %s</string>
    <string name="cannot_override_color">Cannot override this color</string>
    <string name="dismiss">Dismiss</string>
    <string name="color_reset_success">Custom color reset successfully</string>
    <string name="reset_all">Reset all</string>
    <string name="reset_all_success">All colors reset successfully</string>
    <string name="backup_restore_title">Backup &amp; restore configs</string>
    <string name="backup_restore_desc">Share the delight of your theme\'s unique look and feel by saving and sharing your configuration</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="backup_success">Backup successful</string>
    <string name="backup_fail">Backup failed</string>
    <string name="restore_success">Restore successful</string>
    <string name="restore_fail">Restore failed</string>
    <string name="restart">Restart</string>
    <string name="retry">Retry</string>
    <string name="confirmation_title">Are you sure?</string>
    <string name="confirmation_desc">This will override your current theme and configuration.</string>
    <string name="root_service_not_found">Root permission not granted.</string>
    <string name="shizuku_service_not_found">Shizuku permission not granted.</string>
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="permission_must_be_granted">Permission must be granted</string>
    <string name="grant">Grant</string>
    <string name="background_service_notification_title">Background service</string>
    <string name="background_service_notification_text">Useless notification. Tap to disable.</string>
    <string name="background_service_notification_channel_title">Background service</string>
    <string name="background_service_notification_channel_text">You can turn off these notifications.</string>
    <string name="file_access_permission_required">Files access required to generate wallpaper colors.</string>
    <string name="onboarding_image">Onboarding image</string>
    <string name="perm_one_title">Post Notifications</string>
    <string name="perm_one_desc">This permission is required to keep the service alive in background.</string>
    <string name="perm_two_title">Read Media Images</string>
    <string name="perm_two_desc">This permission is required to retrieve home and lockscreen wallpaper.</string>
    <string name="perm_three_title">All Files Access</string>
    <string name="perm_three_desc">This permission is required to retrieve home and lockscreen  wallpaper.</string>
    <string name="perm_four_title">Battery Optimization</string>
    <string name="perm_four_desc">Unrestricted battery optimization is required to allow running in background.</string>
    <string name="start">Start</string>
    <string name="btn_continue">Continue</string>
    <string name="monet_neutral_desc">Lively and refreshing color palette inspired by the effervescence of spritz beverages.</string>
    <string name="monet_monochrome_desc">Harmonious scheme using variations of a single hue for a sleek and minimalist aesthetic.</string>
    <string name="monet_tonalspot_desc">Palette featuring subtle variations in tone, creating a sophisticated and nuanced visual impact.</string>
    <string name="monet_vibrant_desc">Energetic and dynamic color combination that exudes liveliness and intensity.</string>
    <string name="monet_rainbow_desc">Diverse spectrum of colors, symbolizing diversity, playfulness, and a wide range of possibilities.</string>
    <string name="monet_expressive_desc">Bold and expressive mix of colors that conveys emotion and creativity.</string>
    <string name="monet_fidelity_desc">Faithful representation of colors, ensuring accuracy and authenticity in visual representation.</string>
    <string name="monet_fruitsalad_desc">Eclectic blend of colors reminiscent of a vibrant assortment of fresh and juicy fruits.</string>
    <string name="monet_content_desc">Balanced and calming palette, promoting a sense of tranquility and contentment.</string>
    <string name="per_app_theme_warn">You may have noticed that certain apps not following system theme, a result of the MaterialComponents update (v1.11.0+). Manually select those apps here to apply the theme, and remember to close and reopen those apps to see the changes take effect.</string>
    <string name="colors">Colors</string>
    <string name="per_app_theme">Per app theme</string>
    <string name="settings">Settings</string>
    <string name="styles">Styles</string>
    <string name="theme">Theme</string>
    <string name="wallpaper_colors">Wallpaper colors</string>
    <string name="basic_colors">Basic colors</string>
    <string name="force_per_app_theme_title">Force per app theme</string>
    <string name="force_per_app_theme_desc">Apply custom colors to specific apps which do not follow system monet</string>
    <string name="back">Back</string>
    <string name="permissions">Permissions</string>
    <string name="optimization">Optimization</string>
    <string name="choose_method">Choose method</string>
    <string name="auto_startup">Auto startup</string>
    <string name="auto_startup_title">Start service on boot</string>
    <string name="auto_startup_desc">%s will automatically initiate its service upon system boot.<![CDATA[<br /><br />]]>If this is not the case, please verify whether your system or any third-party tools may be restricting %s. For detailed instructions, you can refer to <![CDATA[<a href="https://dontkillmyapp.com"><b><u>Don\'t kill my app!</u></b></a>]]>.</string>
    <string name="about_this_app_title">About this app</string>
    <string name="about_this_app_desc">Information about this app and its developer</string>
    <string name="search_hint">Search here…</string>
    <string name="note_title">Note:</string>
    <string name="grant_all_permissions">Please grant all permissions to proceed</string>
    <string name="app_service_title">%s service</string>
    <string name="app_service_desc_on">Theming is active</string>
    <string name="app_service_desc_off">Theming is inactive</string>
    <string name="tint_text_title">Tint text color</string>
    <string name="custom_secondary_color_desc">Custom secondary color</string>
    <string name="custom_secondary_color_summary">Select pure white color to disable</string>
    <string name="custom_tertiary_color_title">Custom tertiary color</string>
    <string name="custom_tertiary_color_desc">Select pure white color to disable</string>
    <string name="mode_specific_theme_title">Mode-specific theme</string>
    <string name="mode_specific_theme_desc">Apply different saturation and lightness for light and dark modes</string>
    <string name="allow_external_access_title">Allow external access</string>
    <string name="allow_external_access_desc">Other apps will be able to configure this app</string>
    <string name="external_overlay_timeout_title">External color overlay timeout (seconds)</string>
    <string name="external_overlay_timeout_desc">If the timeout is exceeded, color overlays set by external apps will be cleared (0 for no timeout)</string>
</resources>